--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/littlelink.svg" class="avatar" srcset="images/littlelink.svg 2x" alt="">
+        <img src="images/foto 1.png" class="avatar" srcset="images/foto 1.png 2x" alt="">
 
         <!-- Title -->
         <h1 role="heading">@e.temporario</h1>
