--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/littlelink.png">
-
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&display=swap');
+    </style> 
 </head>
 
 <body>
