--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/littlelink.png">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Yeseva+One&display=swap');
     </style> 
 </head>
 
