--- a/index.html
+++ b/index.html
@@ -105,14 +105,11 @@
         <!-- Default LittleLink -->
         <a class="button button-default" href="https://forms.gle/k6S4kyjnNhb89fpd6" target="_blank" rel="noopener" role="button">Book a tattoo with me</a><br>
 
-        <!-- Instagram -->
-        <a class="button button-instagram" href="instagram.com/e.temporario" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.svg" alt="">Instagram</a><br>
-
         <!-- Generic Map -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-map.svg" alt="">How to get to my studio</a><br>
+        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button">How to get to my studio</a><br>
 
         <!-- Generic Website -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">JOIA - Ourivesaria de sentimentos</a><br>
+        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button">JOIA - Ourivesaria de sentimentos</a><br>
 
         <br>
         <!-- 
