--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         <h1 role="heading">@e.temporario</h1>
 
         <!-- Short Bio -->
-        <p>Tattoo artist with ADHD. My mind races faster than my needle!</p>
+        <p>
+          <h2> Tattoo artist with ADHD. My mind races faster than my needle! </h2>
+        </p>
 
         <!--
 
