--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="column" style="margin-top: 10%">
+      <div class="column" style="margin-top: 20%">
 
         <!-- Your Image Here -->
-        <img src="images/foto 1.png" class="avatar" srcset="images/foto 1.png 2x" alt="">
+        <img src="images/perfil.png" class="avatar" srcset="images/perfil@2x.png" sizes="(max width: 600px) 100vw" alt="">
 
         <!-- Title -->
         <h1 role="heading">@e.temporario</h1>
-
+        
         <!-- Short Bio -->
-          <h2> Tattoo artist with ADHD. My mind races faster than my needle! </h2>
+          <h2> Dont be sad, come get a tattoo </h2>
         <!--
 
           ## Breaking down <a> attributes:
@@ -83,13 +83,13 @@
 
         -->
 
-        <!-- Default LittleLink -->
+        <!-- Book a tattoo -->
         <a class="button button-default" href="https://forms.gle/k6S4kyjnNhb89fpd6" target="_blank" rel="noopener" role="button">Book a tattoo with me</a><br>
 
-        <!-- Generic Map -->
+        <!-- Studio location -->
         <a class="button button-default" href="#" target="_blank" rel="noopener" role="button">How to get to my studio</a><br>
 
-        <!-- Generic Website -->
+        <!-- Site da Joia -->
         <a class="button button-default" href="#" target="_blank" rel="noopener" role="button">JOIA - Ourivesaria de sentimentos</a><br>
 
         <br>
