--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
       <div class="column" style="margin-top: 20%">
 
         <!-- Your Image Here -->
-        <img src="images/perfil.png" class="avatar" srcset="images/perfil@2x.png" sizes="(max width: 600px) 100vw" alt="">
+        <img src="images/mona.png" srcset="images/mona.png" sizes="(max width: 600px) 00vw" alt="">
 
         <!-- Title -->
         <h1 role="heading">@e.temporario</h1>
         
         <!-- Short Bio -->
-          <h2> Dont be sad, come get a tattoo </h2>
+          <h2>  </h2>
         <!--
 
           ## Breaking down <a> attributes:
