--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/perfil.png">
+  <link rel="icon" type="image/png" href="images/mona.png">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Yeseva+One&display=swap');
     </style> 
