--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1 role="heading">@e.temporario</h1>
         
         <!-- Short Bio -->
-          <h2>  </h2>
+          <h2> teste </h2>
         <!--
 
           ## Breaking down <a> attributes:
