--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         -->
 
         <!-- Book a tattoo -->
-        <a class="button button-default" href="https://forms.gle/k6S4kyjnNhb89fpd6" target="_blank" rel="noopener" role="button">Book a tattoo with me</a><br>
+        <a class="button button-default" href="https://forms.gle/k6S4kyjnNhb89fpd6" target="_blank" rel="noopener" role="button">Book a tattoo</a><br>
 
         <!-- Studio location -->
         <a class="button button-default" href="#" target="_blank" rel="noopener" role="button">How to get to my studio</a><br>
@@ -99,7 +99,7 @@
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-        <p><a href="privacy.html">Privacy Policy</a> | By Diogo Soares, thanks to <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
+        <p>By Diogo Soares, thanks to <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
 
       </div>
     </div>
